Added a funny gif for the index page

--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 <body>
     <h1> Welcome!</h1>
 
-    <h3> Choose a recipe </h3>
+    <img src="images/choose.gif" width="400">    
+    <h2> Choose a recipe </h2>
 
-    <a href="recipes/lasagna.html" <p> Lasagna </p></a>
-
-
+    <a href="recipes/lasagna.html"> Lasagna, an italian classic! </a>
+    <a href="recipes/mote.html"> <p> Mote con Huesillos, perfect for Chilean summers! </p> </a>
+    <a href="recipes/onigiri.html"> <p> Onigiri, an all japan favorite </p> </a>
 
 
 </body>
