Added pictures to each of the recipesand onigiri recipe

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,6 +8,11 @@
 
 <body>
     <h1> Lasagna </h1>
+    <img src="../images/lasagna.jpg" width="400">
+
+    <p> Lasagna is an italian dish </p>
+
+    <h3> How to make lasagna </h3>
 
 
 
