fixed a typo in onigiri recipe

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -15,7 +15,7 @@
     <h3> How to make lasagna </h3>
 
 
-
+    <a href="../index.html"> <p> <strong> Return to index </strong></p> </a>
 </body>
 
 
