--- a/recipes/mote.html
+++ b/recipes/mote.html
@@ -18,9 +18,15 @@
     </p>
 
     <h3> Instructions on how to make mote con huesillos </h3>
-    
+
+    <ol>
+        <il> dance</il>
+    </ol>
 
 
+
+
+    <a href="../index.html"> <p> <strong> Return to index </strong></p> </a>    
 </body>
 
 
