--- a/recipes/onigiri.html
+++ b/recipes/onigiri.html
@@ -8,7 +8,7 @@
 
 <body>
 <h1> Onigiri </h1>
-<img src="../images/onigiri.jpg" width="400">
+<img src="../images/onigiri.jpg" width="400" >
 <p> Onigiri is a simple and delicious preparation from the Japanese cuisine</p>
 
 <h3> How to make onigiri </h3>
@@ -21,21 +21,21 @@
     <li> Soy Sauce <em> it is optional</em></li>
 </ul>
 
-<p> Follow these steps and you'll have a nice onigiri ball </p>
+
+<h4> Steps : </h4>
 <ol>
-    <il> Gather the ingredients</il>
-    <il> Bake then flake the salmon</il>
-    <il> Rinse and cook the rice.</il>
-    <il> Fill portions of rice with salmon</il>
-    <il> Form the onigiri into a ball by using your hands</il>
-    <il> Cut the nori in strips </il>
-        <ul>
-            <il> You can fold the nori into the onigiri if you want.</il>
-        </ul>
-    <il> Eat it!</il>    
+    <li> Gather the ingredients</li>
+    <li> Bake then flake the salmon</li>
+    <li> Rinse and cook the rice.</li>
+    <li> Fill portions of rice with salmon</li>
+    <li> Form the onigiri into a ball by using your hands</li>
+    <li> Cut the nori into strips </li>
+    <li> Eat it!</li>  
+      
 </ol>
 
 
+<a href="../index.html"> <p> <strong> Return to index </strong></p> </a>
 </body>
 
 
