fix on mote recipe

--- a/recipes/mote.html
+++ b/recipes/mote.html
@@ -20,7 +20,9 @@
     <h3> Instructions on how to make mote con huesillos </h3>
 
     <ol>
-        <il> dance</il>
+        <li> Gather some water and chancaca </li>
+        <li> Patience</li>
+        <li> profit</li>
     </ol>
 
 
