Changes to index.html and lasagna.html

--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
     <h1> Welcome!</h1>
 
     <img src="images/choose.gif" width="400">    
-    <h2> Choose a recipe </h2>
 
-    <a href="recipes/lasagna.html"> Lasagna, an italian classic! </a>
-    <a href="recipes/mote.html"> <p> Mote con Huesillos, perfect for Chilean summers! </p> </a>
-    <a href="recipes/onigiri.html"> <p> Onigiri, an all japan favorite </p> </a>
+    <h2> Here I only have cheap and lazy recipes</h2>
+    <h2> Choose one </h2>
+    <ul>
 
+    <li> <a href="recipes/lasagna.html"> Lasagna, an italian classic! </a> </li>
+    <li> <a href="recipes/mote.html"> <p> Mote con Huesillos, perfect for Chilean summers! </p> </a> </li>
+    <li> <a href="recipes/onigiri.html"> <p> Onigiri, an all japan favorite </p> </a> </li>
+    </ul>
 
 </body>
 
