--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -14,6 +14,16 @@
 
     <h3> How to make lasagna </h3>
 
+    <p> Lasagna steps</p>
+    <ol>
+        <li> Buy a pre made lasagna in the super market</li>
+        <li> Check the back of the pre made lasagna box</li>
+        <li> Read that recipe </li>
+        <li> Follow the steps in the back of the box </li>
+        <li> Eat the lasagna</li>
+
+
+    </ol>
 
     <a href="../index.html"> <p> <strong> Return to index </strong></p> </a>
 </body>
