made changes to all files

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,31 +1,37 @@
 <!DOCTYPE html>
 <html set lang="en">
 <head>
+    <link rel="stylesheet" href="../styles.css">
     <meta charset="en">
     <title> Lasagna</title>
 
 </head>
 
 <body>
-    <h1> Lasagna </h1>
+    <div class="lasagna_box">
+    <h1 class="lasagnatitle"> Lasagna </h1>
     <img src="../images/lasagna.jpg" width="400">
 
-    <p> Lasagna is an italian dish </p>
+    <p class="description_box"> Lasagna is an italian dish, there are many
+        people around the world that enjoys eating lasagna. Do you want to enjoy it too?
+        Follow this recipe and be ready to impress your friends!
+    </p>
+    </div>
 
-    <h3> How to make lasagna </h3>
+    <h3 class = "info_box"> How to make lasagna </h3>
 
-    <p> Lasagna steps</p>
-    <ol>
+    <div class = "steps_box"> 
+    <p class = "steps_box"> Lasagna steps</p>
+    <ol class="steps_box">
         <li> Buy a pre made lasagna in the super market</li>
         <li> Check the back of the pre made lasagna box</li>
         <li> Read that recipe </li>
         <li> Follow the steps in the back of the box </li>
         <li> Eat the lasagna</li>
-
-
     </ol>
+    </div>
 
-    <a href="../index.html"> <p> <strong> Return to index </strong></p> </a>
+    <a href="../index.html"> <button class="return_button"> <strong> Return to index </strong></button> </a>
 </body>
 
 
